@@ -37,6 +37,8 @@ public class WalkthroughScroller {
                 .map(parent -> EasyBind.listen(parent.boundsInParentProperty(), debouncedScroller))
                 .forEach(subscriptions::add);
         subscriptions.add(EasyBind.listen(node.localToSceneTransformProperty(), debouncedScroller));
+
+        scrollNodeIntoView(node, scrollableParents);
     }
 
     public void cleanup() {
@@ -131,7 +133,7 @@ public class WalkthroughScroller {
 
         if (itemHeight > 0) {
             double targetCenterY = targetBounds.getCenterY();
-            return (int) Math.max(0, Math.min(itemCount - 1, targetCenterY / itemHeight));
+            return (int) Math.clamp(targetCenterY / itemHeight, 0, itemCount - 1);
         }
         return -1;
     }
